# ssabd

./: .gitignore  CMakeLists.txt  README.md  SDT.cpp  SDT.h  common.h  eval.cpp  eval.h  interval.h  main.cpp  main.h  nodes.h  runall.sh  scc.cpp  scc.h  ssa.l  ssa.y
assets/: example.ssa
